--- a/index.html
+++ b/index.html
@@ -54,11 +54,42 @@
       <div class="page-content">
         <div id="main"> </div>
       </div>
-        <div class="floating-button">
-          <button class="mdl-button mdl-js-button mdl-button--fab mdl-button--primary">
-            <i class="material-icons">add</i>
-          </button>
+
+        <div id="main">
+          <div class="card-wide mdl-card page-index">
+            <div class="svg--container">
+              <div></div>
+              <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320"><path fill="#f51a66" fill-opacity="1" d="M0,64L20,64C40,64,80,64,120,64C160,64,200,64,240,101.3C280,139,320,213,360,256C400,299,440,309,480,293.3C520,277,560,235,600,218.7C640,203,680,213,720,234.7C760,256,800,288,840,277.3C880,267,920,213,960,181.3C1000,149,1040,139,1080,154.7C1120,171,1160,213,1200,224C1240,235,1280,213,1320,202.7C1360,192,1400,192,1420,192L1440,192L1440,320L1420,320C1400,320,1360,320,1320,320C1280,320,1240,320,1200,320C1160,320,1120,320,1080,320C1040,320,1000,320,960,320C920,320,880,320,840,320C800,320,760,320,720,320C680,320,640,320,600,320C560,320,520,320,480,320C440,320,400,320,360,320C320,320,280,320,240,320C200,320,160,320,120,320C80,320,40,320,20,320L0,320Z"></path></svg>                <path fill="#1A237E" fill-opacity="1" d="M0,256L40,240C80,224,160,192,240,197.3C320,203,400,245,480,229.3C560,213,640,139,720,117.3C800,96,880,128,960,170.7C1040,213,1120,267,1200,288C1280,309,1360,299,1400,293.3L1440,288L1440,320L1400,320C1360,320,1280,320,1200,320C1120,320,1040,320,960,320C880,320,800,320,720,320C640,320,560,320,480,320C400,320,320,320,240,320C160,320,80,320,40,320L0,320Z"></path>
+              </svg>
+            </div>
+            <div class="page--initial">
+              <i class="material-icons">emoji_objects</i>
+              <div class="description">
+                Si no quieres olvidarte de una idea, mensaje o palabra publícalos y hazlos persistentes.
+              </div>
+            </div>
+            <div class="page--initial">
+              <i class="material-icons">add_a_photo</i>
+              <div class="description">
+                Si no quieres perder fotos que tomaste de lugares, personas y eventos que te gustaron, publícala para que no se pierda.
+              </div>
+            </div>
+            <div class="page--initial">
+              <i class="material-icons">ondemand_video</i>
+              <div class="description">
+                Si no quieres escribir y solo deseas grabar un video o un audio, también puedes hacerlo y volverlo un recuerdo para siempre.
+              </div>
+            </div>
+          </div>
         </div>
+      </div>
+      <div class="floating-button">
+        <button class="mdl-button mdl-js-button mdl-button--fab mdl-button--primary">
+          <i class="material-icons">add</i>
+        </button>
+      </div>
+
+
 
       <!-- Sección para agregar un post -->
       <div class="card-wide mdl-card" id="modal-post-section">
